--- a/themes/antares/layout/_partial/archive.ejs
+++ b/themes/antares/layout/_partial/archive.ejs
@@ -1,7 +1,25 @@
 <div class="post">
     <!-- Title -->
-    <h3 class="post__title">
+    <% 
+        const topMin = 0;
+        const topMax = 50;
+        const bottomMin = 51;
+        const bottomMax = 100;
+
+        const yPosition_1 = Math.floor(Math.random() * (topMax - topMin + 1)) + topMin;
+        const yPosition_4 = Math.floor(Math.random() * (bottomMax - bottomMin + 1)) + bottomMin;
+
+        const yPosition_2 = Math.floor(Math.random() * (topMax - topMin + 1)) + topMin;
+        const yPosition_3 = Math.floor(Math.random() * (bottomMax - bottomMin + 1)) + bottomMin;
+    %>
+    <h3 class="post__title post__title--with-bg">
         <a href="<%- config.root %><%- item.path %>">
+            <span class="background-decoration" style="clip-path: polygon(
+                0 <%- yPosition_1 %>%,
+                100% <%- yPosition_2 %>%,
+                100% <%- yPosition_3 %>%,
+                0 <%- yPosition_4 %>%)
+            "></span>
             <%- item.title %>
         </a>
     </h3>
