--- a/themes/antares/layout/_partial/sidebar.ejs
+++ b/themes/antares/layout/_partial/sidebar.ejs
@@ -1,16 +1,21 @@
-<div class="sidebar">
-  <h4 class="sidebar__title">See me outside</h4>
-  <ul>
-    <li><a href="https://facebook.com/antaresprogramming" target="_blank">Antares on Facebook</a></li>
-    <li><a href="https://github.com/celestialcinnamon/antares-blog" target="_blank">Antares on Github</a></li>
-  </ul>
+<aside lang="en" class="sidebar">
+  <div class="sidebar-wrapper" id="search">
+    <%- partial('_partial/search-view') %>
+  </div>
+  <div class="sidebar-wrapper">
+    <h4 class="sidebar__title">See me outside</h4>
+    <ul>
+      <li><a href="https://facebook.com/antaresprogramming" target="_blank">Antares on Facebook</a></li>
+      <li><a href="https://github.com/celestialcinnamon/antares-blog" target="_blank">Antares on Github</a></li>
+    </ul>
+  
+    <ul>
+      <li><a href="https://facebook.com/dorkas.rubio" target="_blank">See me on Facebook</a></li>
+      <li><a href="#!" onclick="alert('I told you to not do that')">See me on Twitter</a> (please don't)</li>
+      <li><a href="https://instagram.com/melancholicapoptosis" target="_blank">See me on Instagram</a></li>
+      <li><a href="https://celestialcinnamon.github.io" target="_blank">See my portfolio</a></li>
+      <li><a href="mailto:https:francoisoibur21@gmail.com" target="_blank">Send me an email:</a> francoisoibur21@gmail.com</li>
+    </ul>
+  </div>
 
-  <ul>
-    <li><a href="https://facebook.com/dorkas.rubio" target="_blank">See me on Facebook</a></li>
-    <li><a href="#!" onclick="alert('I told you to not do that')">See me on Twitter</a> (please don't)</li>
-    <li><a href="https://instagram.com/melancholicapoptosis" target="_blank">See me on Instagram</a></li>
-    <li><a href="https://celestialcinnamon.github.io" target="_blank">See my portfolio</a></li>
-    <li><a href="mailto:https:francoisoibur21@gmail.com" target="_blank">Send me an email:</a> francoisoibur21@gmail.com</li>
-  </ul>
-  <p>I also want to beg you not to use Google Translate <strong>at any cost</strong>, even if you don't understand what I am talking about. It borks out the articles, and the translation seldom makes sense. GTranslate has improved really well, but it's not that intelligent, so please preserve my reputation by not using it on this site. <a style="display: inline;" href="https://github.com/celestialcinnamon/antares-blog/issues/new">Send me a GitHub issue</a> if you need a translation to your language.</p>
-</div>
+</aside>
