Revised post about Intrinsic Web Design

--- a/themes/antares/layout/_partial/article.ejs
+++ b/themes/antares/layout/_partial/article.ejs
@@ -2,7 +2,7 @@
 
 <div class="post post--full">
     <!-- Title -->
-      <h1 class="blog-post-title">
+      <h1 class="post__title">
           <a href="<%- config.root %><%- item.path %>">
               <%- item.title || item.link%>
           </a>
