--- a/themes/antares/source/css/index.css
+++ b/themes/antares/source/css/index.css
@@ -266,8 +266,11 @@ blockquote {
 
 .post__title {
   font-size: 1.5rem;
-  margin: 0;
+  margin: 1rem auto;
   font-family: var(--sans-serif), sans-serif;
+  max-width: 70ch;
+  width: 100%;
+  padding: 0 1rem;
 }
 
 .post__title a {
@@ -381,6 +384,12 @@ a[target=_blank]::after {
   background-color: var(--card-bg);
   padding: 1rem;
   font-size: 0.85rem;
+  max-width: 70ch;
+  margin: auto;
+}
+
+.sidebar {
+  grid-row: span 2;
 }
 
 .sidebar ul {
@@ -392,7 +401,7 @@ a[target=_blank]::after {
 }
 
 .sidebar a {
-  padding: 1rem;
+  padding: 0.5rem 1rem;
   display: block;
 }
 
@@ -403,10 +412,23 @@ a[target=_blank]::after {
 
 .sidebar__title {
   margin: 0;
+  display: inline-block;
 }
 
 .sidebar p {
   font-size: 1em;
+}
+
+.toc, .toc-child {
+  padding: 0;
+}
+
+.toc-child {
+  padding-left: 1rem;
+}
+
+.search-wrapper {
+  margin: 1rem auto;
 }
 
 .img-wrapper {
