--- a/themes/antares/source/css/index.css
+++ b/themes/antares/source/css/index.css
@@ -901,6 +901,15 @@ noscript:focus {
     6px 6px 0 var(--primary-dark);
 }
 
+.page .post--full > p:nth-of-type(2)::first-letter {
+  color: unset;
+  font-family: var(--serif), serif;
+  font-size: 1rem;
+  font-weight: unset;
+  line-height: 1;
+  text-shadow: none;
+}
+
 li {
   line-height: 2;
 }
