Fixed a bunch of things

--- a/themes/antares/layout/_partial/sidebar.ejs
+++ b/themes/antares/layout/_partial/sidebar.ejs
@@ -1,7 +1,7 @@
 <aside lang="en" class="sidebar">
   
   <section class="sidebar-wrapper">
-    <details>
+    <details open>
       <summary>
         <h4 class="sidebar__title">In this post...</h4>
       </summary>
