Fixed a bunch of things and added analytics

--- a/themes/antares/layout/_partial/header.ejs
+++ b/themes/antares/layout/_partial/header.ejs
@@ -6,7 +6,7 @@
     <a class="cover__link" href="https://facebook.com/antaresprogramming" target="_blank"><%- image_tag('images/facebook.svg', {alt: "Go to Facebook"}) %></a>
   </header>
 </section>
-<nav class="nav">
+<nav class="nav" aria-label="Primary Navigation">
   <a class="nav-item" href="/antares-blog/" title="Home" aria-label="Go to home">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 34"><path d="M16 34V22h8v12h10V18h6L20 0 0 18h6v16z"/></svg>
     <span class="nav-item--desktop">Home</span>
