--- a/themes/antares/layout/_partial/sidebar.ejs
+++ b/themes/antares/layout/_partial/sidebar.ejs
@@ -1,9 +1,9 @@
 <aside lang="en" class="sidebar">
   
-  <section class="sidebar-wrapper">
+  <section class="sidebar-wrapper" aria-label="Table of Contents">
     <details open>
       <summary>
-        <h4 class="sidebar__title">In this post...</h4>
+        <h4 class="sidebar__title" id="sidebar-title">In this post...</h4>
       </summary>
       <%- toc(page.content) %>
     </details>
