--- a/themes/antares/layout/index.ejs
+++ b/themes/antares/layout/index.ejs
@@ -1,4 +1,4 @@
-<div class="index">
+<main class="index" aria-label="Content">
     <section class="section">
         <header class="section__heading">
             <h2>Featured Article</h2>
@@ -24,7 +24,7 @@
         <% }); %>
         
     </section>
-</div>
+</main>
 
 <!--div class="posts-container">
     < page.posts.each(function(item){ %>
