--- a/themes/antares/layout/_partial/head.ejs
+++ b/themes/antares/layout/_partial/head.ejs
@@ -55,8 +55,8 @@
     href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900"
     rel="stylesheet"
   />
-   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet"> 
   <!--
     HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
   -->
@@ -64,4 +64,14 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131462553-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-131462553-1');
+  </script>
+
 </head>
