Included Lora font

--- a/themes/antares/layout/_partial/head.ejs
+++ b/themes/antares/layout/_partial/head.ejs
@@ -55,8 +55,8 @@
     href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900"
     rel="stylesheet"
   />
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i&amp;subset=latin-ext" rel="stylesheet"> 
   <!--
     HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
   -->
