--- a/themes/antares/layout/_partial/footer.ejs
+++ b/themes/antares/layout/_partial/footer.ejs
@@ -54,3 +54,56 @@
   <p>&copy; 2018 Francis Rubio</p>
   <p><a href="#">Back to top</a></p>
 </footer>
+<script>
+  const searchDataEndpoint = '<%- config.root %>search.json';
+  const searchData = [];
+
+  fetch(searchDataEndpoint)
+    .then(raw => raw.json())
+    .then(data => searchData.push(...data));
+
+  function searchForContent(wordToMatch, data) {
+    const regex = new RegExp(wordToMatch, 'gi');
+    
+    return data.filter(post => {
+      const titleMatched = post.title.match(regex);
+      const contentMatched = post.content.match(regex);
+      const urlMatched = post.url.match(regex);
+
+      return titleMatched || contentMatched || urlMatched;
+    })
+  }
+
+  function displayResults() {
+    if(this.value === '') {
+      searchResults.innerHTML = '';
+      return;  
+    }
+
+    const matches = searchForContent(this.value, searchData);
+    const html = matches.map(item => {
+      const regex = new RegExp(this.value, 'gi');
+      const title = item.title.replace(regex, `<mark>${this.value}</mark>`);
+      const url = '/' + item.url.replace('<%- config.root %>', '');
+      const content = item.content
+        .replace(regex, `<mark>${this.value}</mark>`)
+        .substring(0, 120) + "&hellip;";
+
+      return `
+      <li>
+        <h3 class="result__header"><a href="${item.url}">${title}</a></h3>
+        <span class="result-link"><%- config.url %>${url}</span>
+        <p class="content-snippet">${content}</p>
+      </li>`;
+    })
+
+    searchResults.innerHTML = html.join('');
+  }
+
+  const searchInput = document.getElementById('search-input');
+  const searchResults = document.querySelector('.search-results');
+
+  searchInput.addEventListener('input', displayResults)
+  searchInput.addEventListener('change', displayResults)
+
+</script>
