--- a/themes/antares/source/css/index.css
+++ b/themes/antares/source/css/index.css
@@ -74,6 +74,11 @@ strong {
   color: var(--text--darker);
 }
 
+mark {
+  background-color: var(--primary);
+  /* outline: 5px solid var(--primary); */
+}
+
 h1,
 h2,
 h3,
@@ -271,10 +276,6 @@ blockquote {
   padding: 0.5rem;
 }
 
-.section--meta {
-  height: 100%;
-  width: 100%;
-}
 
 .post {
   padding: 1rem;
@@ -772,14 +773,55 @@ noscript:focus {
 }
 
 .search-view {
-  display: grid;
   grid-template-columns: min-content 1fr;
   gap: 1rem;
   grid-gap: 1rem;
 }
 
+.search-view:not(.noscript) {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--footer-bg);
+  z-index: 999;
+  grid-template-rows: min-content 1fr;
+  transform: translateY(-120vh);
+  transition: transform 300ms;
+}
+
+.search-open .search-view:not(.noscript) {
+  transform: translateY(0);
+  transition: transform 300ms;
+}
+
 .close {
   width: 50px;
+  height: 50px;
+  align-self: center;
+  margin: 1rem;
+  background-color: transparent;
+  border: 0;
+  display: grid;
+  align-items: center;
+  cursor: pointer;
+}
+
+.close::before,
+.close::after {
+  content: '';
+  height: 3px;
+  border-radius: 50px;
+  width: 80%;
+  background-color: var(--header-bg-light);
+  grid-column: 1/2;
+  grid-row: 1/2;
+  transform: rotate(45deg);
+}
+
+.close::after {
+  transform: rotate(-45deg);
 }
 
 .noscript .close {
@@ -787,7 +829,40 @@ noscript:focus {
 }
 
 .search-results {
-  grid-column: 2/3;
+  grid-column: 1/3;
+  overflow-y: auto;
+}
+
+.search-view:not(.noscript) .search-results {
+  height: 60vh;
+}
+
+.search-view.noscript .search-results::before {
+  content: "NOTICE: Search won't work because JavaScript is disabled";
+}
+
+.search-results li {
+  max-width: 60ch;
+  display: grid;
+  margin: auto;
+  padding: 1rem;
+  list-style: none;
+}
+
+.result__header {
+  line-height: 1;
+  font-size: 1.5rem;
+  margin: 0.25rem 0;
+}
+
+.result-link {
+  color: #5f5;
+  font-size: 0.75rem;
+  margin-bottom: 1rem;
+}
+
+.content-snippet {
+  opacity: 0.5;
 }
 
 .search-box {
@@ -972,6 +1047,10 @@ li {
 }
 
 @media only screen and (min-width: 1024px) {
+  .search-view {
+    display: grid;
+  }
+
   .post--full ul li,
   .post--full ol li,
   p {
